components/loki/configs/home/ingress-loki.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: loki
  namespace: loki
  annotations:
    tailscale.com/proxy-group: private-ingress
    tailscale.com/tags: tag:k8s-private
    tailscale.com/http-redirect: "true"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "Loki"
    gethomepage.dev/group: "Infrastructure"
    gethomepage.dev/icon: "loki.png"
    gethomepage.dev/href: "https://loki.tail0c49c.ts.net"
    gethomepage.dev/app: "loki"

spec:
  ingressClassName: tailscale
  tls:
    - hosts:
        - loki
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: loki-gateway
                port:
                  number: 80
